--- a/app.html
+++ b/app.html
@@ -37,7 +37,7 @@
   radial-gradient(900px 500px at 20% 0%, rgba(14,165,164,.08), transparent 55%),
   radial-gradient(900px 500px at 80% 0%, rgba(79,70,229,.08), transparent 55%),
   linear-gradient(180deg, var(--bg2), var(--bg));
-
+    }
     a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
     :focus-visible{outline:3px solid rgba(79,70,229,.55);outline-offset:3px;border-radius:12px}
@@ -100,19 +100,14 @@
   font-weight:800;
   color:var(--txt);
   box-shadow:0 8px 20px rgba(14,165,164,.15);
-  transform:translateY(0);
-  transition:all .18s ease;
+  transition:box-shadow .18s ease;
+  letter-spacing:.2px;
 }
 
-/* Make them feel alive */
 .pill:hover{
-  .pill:hover{
   box-shadow:0 12px 28px rgba(14,165,164,.25);
 }
 
-.pill{
-  letter-spacing:.2px;
-}
       /* Stop header/nav from shifting on hover */
 .pp-header .pill:hover,
 .pp-header .btn:hover{
@@ -226,15 +221,6 @@
 }
 
     
-#calcCard{
-  background:
-    linear-gradient(180deg, rgba(255,255,255,.98), rgba(255,255,255,.90));
-  border:1px solid rgba(14,165,164,.35);
-  box-shadow:
-    0 25px 60px rgba(14,165,164,.18),
-    0 10px 30px rgba(16,24,40,.10);
-  transform:translateY(-4px);
-}
 #calcCard{
   background:
     linear-gradient(180deg, rgba(255,255,255,1), rgba(255,255,255,.96));
